--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,8 @@ jobs:
         run: ls
 
       - name: Copy files to server
-        run: rsync . cchampou@minecraft.homeunix.org:/home/cchampou/allixo-docker
-      
-        #- name: Run a multi-line script
-        #run: |
-          #  echo Add other actions to build,
-          #  echo test, and deploy your project.
+        run: rsync . $SSH_USERNAME:$SSH_PASSWORD@minecraft.homeunix.org:/home/cchampou/allixo-docker
+        env:
+          SSH_USERNAME: {{ secrets.ALLIXO_USERNAME }}
+          SSH_PASSWORD: {{ secrets.ALLIXO_PASSWORD }}
 
